5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1798_2567.log
== TEST (2019-06-05 15:46:47) 
-- CODE:
x = int(input("indice: "))

i = -1
y = arange(x)

while i < y[0]:
	print("*" * v[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = arange(x)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:47:17) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x)

while i < y[0]:
	print("*" * v[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:48:39) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x)

while i < y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:49:02) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x)

while i == y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:49:23) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x)

while y[i] == y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:49:53) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x)

while y[i] != y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:50:34) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x + 1)

while y[i] != y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:51:21) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x + 1)

for i in y:
	while y[i] != y[0]:
		print("*" * y[i])
		i = i - 1
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:28:33) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x + 1)

while y[i] != y[0]:
	print("*" * y[i])
	i = i - 1
for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:37:46) 
-- CODE:
from numpy import*
x = int(input("indice: "))

i = -1
y = arange(x + 1)

for i in y:
	while y[i] != y[0]:
		print("*" * y[i])
		i = i - 1
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:57:01) 
-- CODE:
from numpy import*
x = int(input("indice: ")
y = arange(x + 1)
z = [1,2]
for i in z:
	if i == 1:
		print(z[:-1])
	else:
		print(z[0:])
-- ERROR:
File "XXXX", line 3
    y = arange(x + 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:57:22) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = [1,2]
for i in z:
	if i == 1:
		print(z[:-1])
	else:
		print(z[0:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:01:51) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)


for i in y:
	print("*" * i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:14:11) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1] + 1):
	if (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1
	else:
		print("*" * y[i])
		i = i - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:15:46) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1] + 1):
	if (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1
	else:
		print("*" * y[i])
		i = i - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:17:49) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1] + 1):
	if i < 0:
		print("*" * y[i])
		i = i - 1
	elif (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:19:10) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1] + 1):
	if (i < 0) and (y[i] =! y[0]):
		print("*" * y[i])
		i = i - 1
	elif (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1

-- ERROR:
File "XXXX", line 8
    if (i < 0) and (y[i] =! y[0]):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:19:18) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1] + 1):
	if (i < 0) and (y[i] != y[0]):
		print("*" * y[i])
		i = i - 1
	elif (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:19:59) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1]):
	if (i < 0) and (y[i] != y[0]):
		print("*" * y[i])
		i = i - 1
	elif (y[i] == y[0]):
		i = 0
	elif i >= 0:
		print("*" * y[i])
		i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:21:05) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

i = -1

while i < (y[-1]):
	if (i < 0) and (y[i] != y[0]):
		print("*" * y[i])
		i = i - 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:22:44) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:23:24) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

for i in y:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:28:13) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = zeros(sum(y), dtype=int)
j = -1
for i in z:
	z[i] = y[j]
	j = j - 1
for i in z:
	print(i * "*")
for i in y:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:51) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = zeros(sum(y), dtype=int)

j = -1

while y[j] =! y[0]:
	z[i] = y[j]
	j = j - 1
for i in z:
	print(i * "*")
for i in y:
	print(i * "*")
-- ERROR:
File "XXXX", line 8
    while y[j] =! y[0]:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:01) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = zeros(sum(y), dtype=int)

j = -1

while y[j] != y[0]:
	z[i] = y[j]
	j = j - 1
for i in z:
	print(i * "*")
for i in y:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:16) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = zeros(sum(y), dtype=int)

j = -1

while y[j] != y[0]:
	z[j] = y[j]
	j = j - 1
for i in z:
	print(i * "*")
for i in y:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:47) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)
z = zeros(sum(y), dtype=int)

j = -1

while y[j] != y[0]:
	z[j] = y[j]
	j = j - 1
for i in z:
	print(i * "*")
for i in y:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:13) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x + 1)

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:27) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:55) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)

for i in y:
	y[i] = y[i] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:53:03) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)

for i in y:
	y[i] = y[i] + 1
	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:59:47) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

for i in y:
	y[i] = y[i] + 1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:02:22) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0

for i in y:
	y[i] = y[i] + 1
while y[i] != y[0]:
	z[j] = y[i]
	j = j + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:03:35) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] != y[0]:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:02) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > (y[0] - 1):
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:11) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] < (y[0] - 1):
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:19) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > (y[0] - 1):
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:30) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > y[0]:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:06:37) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > y[0] + 1:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:06:45) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > y[0] - 1:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:06:57) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] > y[0]:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:12) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in y:
	y[i] = y[i] + 1
while y[i] != y[0]:
	z[j] = y[i]
	j = j + 1
	i = i - 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:25:38) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in range(x,0,-1):
	print(i * "*")
for i in range(1,x + 1):
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:25:44) 
-- CODE:
from numpy import*
x = int(input("indice: "))
y = arange(x)
z = zeros(x * 2, dtype=int)

j = 0
i = -1

for i in range(x,0,-1):
	print(i * "*")
for i in range(1,x + 1):
	print(i * "*")
-- EXECUTION TIME:
0.90508
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
